--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,6 +1,7 @@
 = bootstrap_form_for @user do |f|
 
     = f.text_field :email
+    = f.text_field :name
     = f.password_field :password
     = f.password_field :password_confirmation
 
