--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,8 +1,10 @@
 h1 Editing user
 
-== render 'form'
+= render 'form'
 
 = link_to 'Show', @user
 '|
 = link_to 'Back', users_path
+'|
+= link_to 'Destroy', @user, data: { confirm: 'Are you sure?' }, method: :delete
 
