--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -15,4 +15,5 @@ table class="table table-hover"
 
 br
 
-= link_to 'Registration', new_user_path, class: 'btn btn-default'
+- unless logged_in?
+  = link_to 'Registration', new_user_path, class: 'btn btn-default'
